Finished Assignment 3 of Flex Exercises Used flex to align, justify, and add correct spacing.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  align-items: center;
 }
 
 .profile-image {
@@ -35,6 +39,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin: 0 16px;
 }
 
 a {
@@ -45,4 +50,19 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  padding: 0 16px;
+}
+
+.left
+{
+  display: flex;
+  justify-content: flex-start;
+}
+
+.right
+{
+  display: flex;
+  justify-content: flex-end;
 }
